Fix location of filters and headers on tablets and mobiles JC-522

--- a/apps/vanilla/src/pages/1/css/media.css
+++ b/apps/vanilla/src/pages/1/css/media.css
@@ -65,11 +65,12 @@
   }
 
   .filtered-cards__subtitle {
-    top: 240px;
+    padding-top: 24px;
+    top: 264px;
   }
 
   .filtered-books__filter {
-    height: 240px;
+    height: 264px;
     border-bottom: 1px solid var(--border);
   }
 
